# prima_rs_logger

./: .drone.yml  Cargo.toml  Dockerfile  README.md  catalog-info.yaml
src/: lib.rs
src/logger/: json.rs  macros.rs  message.rs  mod.rs  terminal.rs
