[package]
name = "prima_rs_logger"
version = "0.1.0"
authors = ["Simone Cottini <simone.cottini@prima.it>"]
edition = "2018"
license = "MIT"
description = "Prima logging standard library"
repository = "https://github.com/primait/prima_rs_logger"
readme = "README.md"

[dependencies]
slog = {version = "2.5.2", features = ["max_level_debug", "release_max_level_info"]}
slog-term = "2.6.0"
slog-async = "2.5.0"
slog-atomic = "3.0.0"
slog-stdlog = "4.0.0"
slog-scope = "4.3.0"
slog-envlogger = "2.2.0"
log = "^0.4"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

chrono = { version = "^0.4", features = ["serde"] }

once_cell = "^1.4"